force-app/main/default/objects/Display_Item__c/Display_Item__c.object-meta.xml
<CustomObject>
    <label>Display Item</label>
    <nameField>
        <displayFormat>Display Item - {0000}</displayFormat>
        <label>Display Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Display Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>