force-app/main/default/objects/Display_Item__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Display Items</relationshipLabel>
    <relationshipName>Display_Items</relationshipName>
    <type>Lookup</type>
</CustomField>