force-app/main/default/objects/Display_Item__c/fields/SalesandMarket__c.field-meta.xml
<CustomField>
    <fullName>SalesandMarket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales And Market</label>
    <referenceTo>Sales_And_Market__c</referenceTo>
    <relationshipLabel>Display Items</relationshipLabel>
    <relationshipName>Display_Items</relationshipName>
    <type>Lookup</type>
</CustomField>