force-app/main/default/objects/Display_Item__c/fields/Style_Type__c.field-meta.xml
<CustomField>
    <fullName>Style_Type__c</fullName>
    <label>Style Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>