force-app/main/default/objects/Display_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ceramic Tile</fullName>
            </value>
            <value>
                <fullName>Ancillary Items</fullName>
            </value>
            <value>
                <fullName>LVT</fullName>
            </value>
            <value>
                <fullName>Laminate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>