force-app/main/default/objects/Display_Item__c/fields/Why_is_the_Dealer_using_products__c.field-meta.xml
<CustomField>
    <fullName>Why_is_the_Dealer_using_products__c</fullName>
    <label>Why is the Dealer using products?</label>
    <type>TextArea</type>
</CustomField>